Add responsive design elements

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
       <li>Classes</li>
       <li>Contact</li>
     </ul>
+    <ul class="mobile-nav container">
+      <li>Menu</li>
+    </ul>
   </nav>
 
   <!-- Product Grid -->
@@ -44,33 +47,35 @@
     <div class="item">
       <div class="item-image">
       <img src="./resources/images/pen.png">
+      </div>
+      <span class="description">Exploding Pen</span>
     </div>
-      <p>Exploding Pen</p>
-    </div>
-    <div class="item">
+    <div class="item watch">
       <div class="item-image">
       <img src="./resources/images/watch.png">
+      </div>
+      <span class="description">Cellular Watch</span>
     </div>
-      <p>Cellular Watch</p>
-    </div>
-    <div class="item">
+    <div class="item glasses">
       <div class="item-image">
       <img src="./resources/images/glasses.png">
-    </div>
-      <p>Thermal Glass</p>
+      </div>
+      <span class="description">Thermal Glass</span>
     </div>
   </div>
 
     <!-- Additional Info -->
+    <div class="container">
+      <div class="business-info">
     <div class="info">
-      <div class="info-box">
-      <p>Location</p>
-      <p>-47.346436, 84.32354<p>
+      <span class="title">Location</span>
+      <span>-47.346436, 84.32354</span>
+    </div>
+      <div class="info">
+        <span class="title">Hours</span>
+        <span>0800 - 1800</span>
       </div>
-      <div class="info-box">
-        <p>Hours</p>
-        <p>0800 - 1800 </p>
-      </div>
+    </div>
     </div>
 
     <!--  Footer -->
